--- a/.github/workflows/youtube-workflow.yml
+++ b/.github/workflows/youtube-workflow.yml
@@ -1,11 +1,11 @@
 name: Latest Youtube Videos
 on:
-  schedule: # Run workflow automatically
-    - cron: '0 * * * *' # Runs every hour, on the hour
+  schedule: # Runs every hour
+    - cron: '0 * * * *' #
   workflow_dispatch: 
 
 jobs:
-  update-readme-with-blog:
+  update-readme-with-youtube:
     name: Update this repo's README with latest videos from Youtube
     runs-on: ubuntu-latest
     steps:
