--- a/.github/workflows/youtube-workflow.yml
+++ b/.github/workflows/youtube-workflow.yml
@@ -1,7 +1,8 @@
 name: Latest Youtube Videos
 on:
-  schedule: # Runs every hour
-    - cron: '0 * * * *' #
+  schedule: 
+    # Runs every hour
+    - cron: '0 * * * *' 
   workflow_dispatch: 
 
 jobs:
